templates/verapdf_template.yaml
---
# Source: verapdf/templates/networkpolicy.yaml
# This file is part of the veraPDF Community Helm Chart
#    https://gitlab.com/MatthiasLohr/verapdf
#
# Copyright 2021-2022 Matthias Lohr <mail@mlohr.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-verapdf
  labels:
    app.kubernetes.io/name: verapdf
    helm.sh/chart: verapdf-1.2.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v1.24.1"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: verapdf
      app.kubernetes.io/instance: release-name
  policyTypes:
    - Egress  # block all outgoing network traffic from these Pods!
---
# Source: verapdf/templates/service.yaml
# This file is part of the veraPDF Community Helm Chart
#    https://gitlab.com/MatthiasLohr/verapdf
#
# Copyright 2021-2022 Matthias Lohr <mail@mlohr.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: release-name-verapdf
  labels:
    app.kubernetes.io/name: verapdf
    helm.sh/chart: verapdf-1.2.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v1.24.1"
  annotations:
spec:
  selector:
    app.kubernetes.io/name: verapdf
    app.kubernetes.io/instance: release-name
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Source: verapdf/templates/deployment.yaml
# This file is part of the veraPDF Community Helm Chart
#    https://gitlab.com/MatthiasLohr/verapdf
#
# Copyright 2021-2022 Matthias Lohr <mail@mlohr.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-verapdf
  labels:
    app.kubernetes.io/name: verapdf
    helm.sh/chart: verapdf-1.2.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v1.24.1"
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: verapdf
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: verapdf
        helm.sh/chart: verapdf-1.2.2
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "v1.24.1"
      annotations:
    spec:
      containers:
      - name: verapdf-rest
        image: verapdf/rest:v1.24.1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
        readinessProbe:
          httpGet:
            port: 8080
            path: /
          initialDelaySeconds: 5
          periodSeconds: 5
---
# Source: verapdf/templates/ingress.yaml
# This file is part of the veraPDF Community Helm Chart
#    https://gitlab.com/MatthiasLohr/verapdf
#
# Copyright 2021-2022 Matthias Lohr <mail@mlohr.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-verapdf
  labels:
    app.kubernetes.io/name: verapdf
    helm.sh/chart: verapdf-1.2.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v1.24.1"
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
spec:
  rules:
  - host: demo.verapdf.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: release-name-verapdf
            port:
              number: 80
  tls:
    - hosts:
      - demo.verapdf.org
      secretName: release-name-verapdf-ingress-tls
